--- a/src/style.css
+++ b/src/style.css
@@ -3,3 +3,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+.markdown {
+  div{
+    font-size: 1rem;
+  }
+  p {
+    margin-bottom: 2vh
+  }
+}
